--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 requests>=2.31
 beautifulsoup4>=4.12
 Pillow>=10.0
@@ -5,6 +6,13 @@ numpy>=1.24
 opencv-python>=4.8
 insightface>=0.7
 onnxruntime>=1.16
+python-dotenv>=1.0
+praw>=7.7
+
+# web
+fastapi>=0.111
+uvicorn[standard]>=0.23
+python-multipart>=0.0.6
 
 # If you have an NVIDIA GPU and want acceleration, replace onnxruntime with:
 # onnxruntime-gpu>=1.16
